# pz-server-tools

./: .gitignore  README.md  TODO  config.json.example  requirements.txt
completion/: javamods  pzserver  pzst
cron/: pz-server-tools  pzserver  pzst
discord/: config.json.example  pzst.py
docs/: CONFIG.md  INSTALL.md  PZSERVER.md  USAGE.md
init.d/: pzstd.service
nginx/: pzst.conf
pypzst/: pyproject.toml  setup.cfg
pypzst/src/pypzst/: __init__.py  rcon.py
pzserver/: javamods  jmconsole  jminstall  jmuninstall  pzbackupsave  pzcancelrestart  pzcheckmods  pzclearbackups  pzclearzpop  pzcmd  pzconfig  pzconsole  pzdebug  pzdeletepz  pzenv  pzinstall  pzkickall  pzkill  pzlinkmaps  pzmaxmem  pzmsg  pzrestart  pzrestartall  pzrestartjob  pzsandbox  pzserver  pzspawnpoints  pzspawnregions  pzst_config  pzstart  pzstartloop  pzstatus  pzstop  pzuninstall  pzupdate  pzupdateall  pzuserpasswd
pzst/: pzst  pzstcheckconfig  pzstclearbackups  pzstconfig  pzstenv  pzstinstall  pzstinstallmunin  pzstuninstall  pzstuninstallmunin  pzstupdate
scripts/: confhelper  jmconsole  jminstall  jmlog  jmuninstall  pzadminpasswd  pzcheckmods  pzclearbackups  pzclearbackupsall  pzclearzpop  pzcmd  pzcommand  pzconfig  pzconsole  pzenv  pzinstall  pzkill  pzlog  pzmaxmem  pzmem  pzmessage  pzquit  pzrestart  pzrestartall  pzrestarter  pzrestarterjob  pzrestartjob  pzsandbox  pzserver  pzserverloop  pzspawnpoints  pzspawnregions  pzst_config  pzstart  pzstartloop  pzstatus  pzstop  pzuninstall  pzupdate  pzupdateall
src/: Makefile  detach.c  ioctl.c  pzst.h  pzstc.c  pzstd.c
