[metadata]
name = pypzst
version = 0.0.1
author = Corentin Delorme
author_email = codelorme@gmail.com
description = A library package used for pz-server-tools
url = https://github.com/quarantin/pz-server-tools/tree/main/pypzst
license = GNU Affero General Public License v3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
